<resources>

    <string name="app_name">Real GPS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_compass">Compass</string>
    <string name="title_activity_main">Real GPS</string>
    <string name="btn_save">Save</string>
    <string name="label_lat">Latitude</string>
    <string name="label_lon">Longitude</string>
    <string name="label_speed">Speed</string>
    <string name="label_bearing">Bearing</string>
    <string name="label_altitude">Altitude</string>
    <string name="unknown">Unknown</string>
    <string name="label_time">Time</string>
    <string name="no_position_info">No position information</string>
    <string name="label_tag">Tag</string>
    <string name="label_version">Version</string>
    <string name="label_speed_units">km/hr</string>
    <string name="label_bearing_units">deg</string>
    <string name="label_alt_units">m</string>
    <string name="label_coord_units">deg</string>
    <string name="label_units">Units</string>

    <string-array name="units_array">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string name="menu_version">Version</string>
    <string name="title_activity_compass">Compass</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_smslocation">SMS Location</string>
    <string name="label_sms_message">Send the following GPS Data:</string>
    <string name="sms_message_hint">GPS data to be sent</string>
    <string name="btn_select_contact">Select Contact</string>
    <string name="btn_send_sms">Send</string>
    <string name="menu_sms">SMS GPS</string>
    <string name="label_sms_contact">SMS Recipient</string>

</resources>