<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/label_sms_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_sms_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="34dp"
        android:hint="@string/sms_message_hint"
        android:text="" />

    <Button
        android:id="@+id/btn_send_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="56dp"
        android:layout_marginRight="38dp"
        android:onClick="sendSMS"
        android:text="@string/btn_send_sms" />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_send_sms"
        android:layout_alignLeft="@+id/txt_sms_message"
        android:layout_marginBottom="78dp"
        android:onClick="selectContact"
        android:text="@string/btn_select_contact" />

    <TextView
        android:id="@+id/txt_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_contact"
        android:layout_alignRight="@+id/btn_contact"
        android:layout_marginBottom="27dp"
        android:hint="@string/label_sms_contact"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
